Arreglos en la animacion del menu

--- a/src/app/home/pages/presentation/presentation.component.html
+++ b/src/app/home/pages/presentation/presentation.component.html
@@ -1,1 +1,20 @@
-<p>presentation works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <div class="col-md-6">
+            <div class="bubble-dialog">{{"Im"| translate}}</div>
+        </div>
+        <div class="col-md-12 mt-4">
+            <h2>Mariana Valdespino</h2>
+            <h4>{{'WebDeveloper'|translate}}</h4>
+        </div>
+        <div class="col-md-12 mt-4">
+            <h5>{{'AboutMe'|translate}}</h5>
+            <p>
+                {{'AboutMeText'|translate}}
+            </p>
+        </div>
+    </div>
+    <div class="col-md-6">
+
+    </div>
+</div>
