--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,6 @@
 
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
