Seccion acerca de mi y routing del menu

--- a/src/app/home/pages/about-me/about-me.component.html
+++ b/src/app/home/pages/about-me/about-me.component.html
@@ -1,1 +1,39 @@
-<p>about-me works!</p>
+<div class="content">
+    <div class="row flex-md-row flex-column-reverse">
+        <div class="col-12 col-md-7 offset-0 text-center text-md-left">
+            <div class="bubble-dialog text-center mx-auto ml-md-0 mt-4 font-weight-bold">{{"Im"| translate}}</div>
+            <div class="mt-4">
+                <h1>Mariana Valdespino</h1>
+                <h6>{{'WebDeveloper'|translate}}</h6>
+                <p class="text-justify">
+                    {{'AboutMeText'|translate}}
+                </p>
+            </div>
+            <div class="badges-technologies d-flex justify-content-center flex-wrap mt-4">
+                <div class="border-badge mt-2 mr-4">
+                    <div class="badge-dark">PHP</div>
+                </div>
+                <div class="border-badge mt-2 mr-4">
+                    <div class="badge-dark">Javascript</div>
+                </div>
+                <div class="border-badge mt-2 mr-4">
+                    <div class="badge-dark">HTML</div>
+                </div>
+                <div class="border-badge mt-2 mr-4">
+                    <div class="badge-dark">CSS</div>
+                </div>
+                <div class="border-badge mt-2 mr-4">
+                    <div class="badge-dark">Typescript</div>
+                </div>
+            </div>
+            <div class="mt-4 text-center">
+                <button type="button" class="btn btn-main">{{'DownloadCV'|translate}}</button>
+            </div>
+        </div>
+        <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-5 offset-md-0">
+            <div class="border-gradient-image">
+                <img src="assets/images/profile.jpg" alt="profile image">
+            </div>
+        </div>
+    </div>
+</div>
