Adelanto del contenido de "What i do"

--- a/src/app/home/pages/what-i-do/what-i-do.component.html
+++ b/src/app/home/pages/what-i-do/what-i-do.component.html
@@ -1,1 +1,33 @@
-<p>what-i-do works!</p>
+<div class="content">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3>{{'WhatIDo'|translate}}</h3>
+            <h6>{{'WhatIDoText'|translate}}</h6>
+        </div>
+
+        <div class="d-md-flex w-100">
+            <div class="cols">
+                <div class="box-info text-center">
+                    <h6 class="mb-4 mb-3 text-uppercase">FRONT-END</h6>
+                    <p>
+                        {{'FrontendDescripcion'|translate}}
+                    </p>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="box-info text-center">
+                    <h6 class="mb-4 mb-3  text-uppercase">BACK-END</h6>
+                    {{'BackendDescription'|translate}}
+                </div>
+            </div>
+            <div class="cols">
+                <div class="box-info text-center">
+                    <h6 class="mb-4 mb-3 text-uppercase">{{'Databases'|translate}}</h6>
+                    <p>
+                        {{'DatabasesDescription'|translate}}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
