--- a/src/styles.css
+++ b/src/styles.css
@@ -40,13 +40,13 @@ h4, h5, h6 {
 }
 
 @media (max-width: 575px) {
-    h1 {
+    h1, h2 {
         font-size: 24px;
     }
-    h2 {
+    h3, h4 {
         font-size: 20px;
     }
-    h3 {
+    h5, h6 {
         font-size: 18px;
     }
     p {
@@ -62,7 +62,7 @@ h4, h5, h6 {
         font-size: calc(1.0em + 1.0vw);
     }
     h5, h6 {
-        font-size: calc(0.8em + 0.8vw);
+        font-size: calc(0.6em + 0.8vw);
     }
     p {
         font-size: calc(0.6em + 0.6vw);
