Seccion "What i do" lista

--- a/src/app/home/pages/about-me/about-me.component.css
+++ b/src/app/home/pages/about-me/about-me.component.css
@@ -9,8 +9,7 @@
 .border-gradient-image {
     width: 100%;
     position: relative;
-    background: linear-gradient(to right, var(--color-primary), var(--color-primary));
-    /* background: linear-gradient(to right, var(--color-primary), var(--color-secondary)); */
+    background: linear-gradient(to right, var(--color-primary), var(--color-secondary));
     padding: 10px;
     float: right;
     border-radius: 50%;
@@ -32,6 +31,14 @@
 .badges-technologies .border-badge {
     padding: 2px;
     border-radius: 5px;
-    background: linear-gradient(to right, var(--color-primary), var(--color-primary));
-    /* background: linear-gradient(to right, var(--color-primary), var(--color-secondary)); */
+    cursor: default;
+    background-image: linear-gradient(to right, var(--color-primary), var(--color-primary));
+    transition: all .2s ease-in-out;
+}
+
+.badges-technologies .border-badge:hover {
+    background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary));
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-
 }
