--- a/src/app/home/pages/skills/skills.component.html
+++ b/src/app/home/pages/skills/skills.component.html
@@ -1,1 +1,31 @@
-<p>skills works!</p>
+<div class="content">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3>{{'Skills'|translate}}</h3>
+            <h6>{{'WhatIDoText'|translate}}</h6>
+        </div>
+
+        <div class="col-md-6">
+            <h4 class="text-center">{{'TechnicallSkills'|translate}}</h4>
+            <div>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS</li>
+                    <li>Bootstrap 4</li>
+                    <li>Material Design</li>
+                    <li>Javascript</li>
+                    <li>JQuery</li>
+                    <li>Angular 4+</li>
+                    <li>React JS</li>
+                    <li>Laravel</li>
+                    <li>Node JS</li>
+                    <li>BBDD Relacionales (Mysql,PostgreSQL,Oracle)</li>
+                    <li>BBDD No Relacionales (MongoDB, Redis, Neo4J)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h4 class="text-center">{{'SoftSkills'|translate}}</h4>
+        </div>
+    </div>
+</div>
