--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -43,8 +43,8 @@ nav .navbar-options {
 }
 
 a .text-nav {
-    font-family: 'Inconsolata-Bold';
-    font-size: 14px;
+    font-family: 'Raleway-Bold';
+    font-size: 12px;
     text-transform: uppercase;
     top: 0px;
     left: 0px;
