--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,30 +1,45 @@
 /* font converted using font-converter.net. thank you! */
 
 @font-face {
-    font-family: "Inconsolata-Regular";
-    src: url("./assets/fonts/Inconsolata-Regular.eot");
+    font-family: "Raleway-Regular";
+    src: url("./assets/fonts/Raleway-Regular.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Inconsolata-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Inconsolata-Regular.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Inconsolata-Regular.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Inconsolata-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Inconsolata-Regular.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Inconsolata-Regular.woff2") format("woff2");
+    src: url("./assets/fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("./assets/fonts/Raleway-Regular.otf") format("opentype"), /* Open Type Font */
+    url("./assets/fonts/Raleway-Regular.svg") format("svg"), /* Legacy iOS */
+    url("./assets/fonts/Raleway-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("./assets/fonts/Raleway-Regular.woff") format("woff"), /* Modern Browsers */
+    url("./assets/fonts/Raleway-Regular.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "Inconsolata-Bold";
-    src: url("./assets/fonts/Inconsolata-Bold.eot");
+    font-family: "Raleway-Bold";
+    src: url("./assets/fonts/Raleway-Bold.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Inconsolata-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Inconsolata-Bold.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Inconsolata-Bold.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Inconsolata-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Inconsolata-Bold.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Inconsolata-Bold.woff2") format("woff2");
+    src: url("./assets/fonts/Raleway-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("./assets/fonts/Raleway-Bold.otf") format("opentype"), /* Open Type Font */
+    url("./assets/fonts/Raleway-Bold.svg") format("svg"), /* Legacy iOS */
+    url("./assets/fonts/Raleway-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("./assets/fonts/Raleway-Bold.woff") format("woff"), /* Modern Browsers */
+    url("./assets/fonts/Raleway-Bold.woff2") format("woff2");
+    /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Raleway-Black";
+    src: url("./assets/fonts/Raleway-Black.eot");
+    /* IE9 Compat Modes */
+    src: url("./assets/fonts/Raleway-Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("./assets/fonts/Raleway-Black.otf") format("opentype"), /* Open Type Font */
+    url("./assets/fonts/Raleway-Black.svg") format("svg"), /* Legacy iOS */
+    url("./assets/fonts/Raleway-Black.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("./assets/fonts/Raleway-Black.woff") format("woff"), /* Modern Browsers */
+    url("./assets/fonts/Raleway-Black.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
