--- a/src/app/home/pages/what-i-do/what-i-do.component.css
+++ b/src/app/home/pages/what-i-do/what-i-do.component.css
@@ -1,31 +1,52 @@
 .box-info {
-    /* -webkit-box-shadow: 3px 3px 9px 0px var(--color-primary);
-    -moz-box-shadow: 3px 3px 9px 0px var(--color-primary);
-    box-shadow: 3px 3px 9px 0px var(--color-primary); */
-    border: 1px solid var(--color-primary);
-    background-color: var(--dark-secondary);
-    border-radius: 10px;
-    padding: 20px;
-    height: 100%;
+    position: relative;
 }
 
-#section-how .box-info img {
-    height: 109px;
+.box-info .face {
+    height: 200px;
+    width: 100%;
+    transition: 0.5s;
+}
+
+.box-info .face.face1 {
+    position: relative;
+    background: var(--dark-secondary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.box-info:hover .face.face1 {
+    background: var(--color-secondary);
+    /* background: var(--color-primary); */
+    transform: translateY(0px);
+}
+
+.box-info .face.face1 img {
+    max-height: 80px;
     width: auto;
 }
 
-@media (min-width:768px) {
-    .cols {
-        flex: 1;
-        padding: 10px;
-    }
+.box-info .face.face2 {
+    position: relative;
+    background: #cdcdcd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    transform: translateY(-100px);
 }
 
-@media (max-width:767px) {
-    .cols {
-        display: block;
-        width: 100%;
-        margin-bottom: 15px;
-        padding: 0px 30px;
-    }
+.box-info:hover .face.face2 {
+    transform: translateY(0);
+}
+
+.box-info .face.face2 .content-box p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: var(--dark-primary);
 }
