--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,6 +5,9 @@
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         </div>
         <div class="navbar-options" [ngClass]="{'show-mobile':showMobile,'no-show-mobile':!showMobile}">
+            <a class="position-relative brand d-none d-md-block">
+                <img src="assets/images/logo2.png" width="55px" alt="logo">
+            </a>
             <a [routerLink]="item.route" class="position-relative" *ngFor="let item of menuItems"
                 [ngClass]="{'show-item':showItem,'no-show-item':!showItem}">
                 <fa-icon [icon]="item.icon"></fa-icon>
