Avances en secciones

--- a/src/app/home/pages/about-me/about-me.component.html
+++ b/src/app/home/pages/about-me/about-me.component.html
@@ -6,7 +6,7 @@
         <div class="col-12 col-md-7 offset-0 text-center text-md-left">
             <div class="bubble-dialog text-center mx-auto ml-md-0 mt-4 font-weight-bold">{{"Im"| translate}}</div>
             <div class="mt-4">
-                <h1><span class="color-primary">M</span>ariana <span class="color-secondary">V</span>aldespino</h1>
+                <h1>Mariana Valdespino</h1>
                 <h6>{{'WebDeveloper'|translate}}</h6>
                 <p class="text-justify">
                     {{'AboutMeText'|translate}}
