--- a/src/app/home/pages/what-i-do/what-i-do.component.html
+++ b/src/app/home/pages/what-i-do/what-i-do.component.html
@@ -4,13 +4,13 @@
         <div class="col-md-4">
             <div class="box-info">
                 <div class="face face1">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <img src="assets/images/web-page-icon.png">
                         <h5 class="text-center mt-4">{{'Frontend'|translate}}</h5>
                     </div>
                 </div>
                 <div class="face face2">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <p>{{'FrontendDescription'|translate}}</p>
                     </div>
                 </div>
@@ -19,13 +19,13 @@
         <div class="col-md-4">
             <div class="box-info">
                 <div class="face face1">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <img src="assets/images/server-icon.png">
                         <h5 class="text-center mt-4">{{'Backend'|translate}}</h5>
                     </div>
                 </div>
                 <div class="face face2">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <p>{{'BackendDescription'|translate}}</p>
                     </div>
                 </div>
@@ -34,13 +34,13 @@
         <div class="col-md-4">
             <div class="box-info">
                 <div class="face face1">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <img src="assets/images/data-icon.png">
                         <h5 class="text-center mt-4">{{'Databases'|translate}}</h5>
                     </div>
                 </div>
                 <div class="face face2">
-                    <div class="content-box">
+                    <div class="text-center content-box">
                         <p>{{'DatabasesDescription'|translate}}</p>
                     </div>
                 </div>
