--- a/src/app/home/pages/skills/badge/badge.component.html
+++ b/src/app/home/pages/skills/badge/badge.component.html
@@ -1,6 +1,5 @@
 <div>
-    <div class="badge" [class.flip-vertical-right]="mouseOvered" (mouseover)="mouseOvered=true"
-        (mouseout)="mouseOvered=false">
+    <div class="badge">
         <div class="circle">
             <fa-icon [icon]="iconBadge"></fa-icon>
         </div>
