--- a/src/app/home/pages/skills/skill-rating/skill-rating.component.css
+++ b/src/app/home/pages/skills/skill-rating/skill-rating.component.css
@@ -1,4 +1,12 @@
 .rounded-circle {
-    width: 20px;
-    height: 20px;
+    width: 13px;
+    height: 13px;
+    border: 2px solid var(--color-primary);
+    transition: 0.3s;
+}
+
+.rounded-circle:hover {
+    transform: scale(1.5);
+    border-color: var(--color-secondary);
+    background-color: #fff!important;
 }
