--- a/src/app/home/pages/skills/skills.component.html
+++ b/src/app/home/pages/skills/skills.component.html
@@ -2,72 +2,73 @@
     <app-header-section [title]="title" *ngIf="title"></app-header-section>
     <div class="row">
         <div class="col-md-12 flex-wrap d-flex justify-content-between">
-            <app-badge [iconBadge]="faUsers" [textBadge]="'Iniciator'"></app-badge>
-            <app-badge [iconBadge]="faBookReader" [textBadge]="'Iniciator'"></app-badge>
-            <app-badge [iconBadge]="faClipboardList" [textBadge]="'Iniciator'"></app-badge>
-            <app-badge [iconBadge]="faCalendarAlt" [textBadge]="'Iniciator'"></app-badge>
-            <app-badge [iconBadge]="faLightbulb" [textBadge]="'Iniciator'"></app-badge>
+            <app-badge role="button" [iconBadge]="faUsers" [textBadge]="'Teamwork'|translate"></app-badge>
+            <app-badge role="button" [iconBadge]="faBookReader" [textBadge]="'Autodidact'|translate"></app-badge>
+            <app-badge role="button" [iconBadge]="faClipboardList" [textBadge]="'ProblemSolving'|translate"></app-badge>
+            <app-badge role="button" [iconBadge]="faCalendarAlt" [textBadge]="'Flexibility'|translate"></app-badge>
+            <app-badge role="button" [iconBadge]="faLightbulb" [textBadge]="'CriticalThinking'|translate"></app-badge>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h4 class="text-center">{{'TechnicallSkills'|translate}}</h4>
+            <!-- <h4 class="text-center mb-4">{{'TechnicallSkills'|translate}}</h4> -->
             <div>
                 <ul class="row list-unstyled">
-                    <li class="col-6 justify-content-center">
-                        <p class="mb-0">HTML5</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">HTML5</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 align-items-center d-flex flex-column">
-                        <div>
-                            <p class="mb-0">CSS</p>
-                            <app-skill-rating [rating]="8"></app-skill-rating>
-                        </div>
-
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">CSS</p>
+                        <app-skill-rating [rating]="8"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0">Bootstrap 4</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">Bootstrap 4</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> Material Design</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> Material Design</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0">Javascript</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">Javascript</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0">Jquery</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">Jquery</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> Angular 4+</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> Angular 4+</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> React JS</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> React JS</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> PHP</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> PHP</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0">Laravel</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill">Laravel</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> Node JS</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> Node JS</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> BBDD Relacionales (Mysql,PostgreSQL,Oracle)</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> SQL</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6">
-                        <p class="mb-0"> BBDD No Relacionales (MongoDB, Redis, Neo4J)</p>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> NoSQL</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
+                    </li>
+                    <li class="col-6 d-flex justify-content-between my-1">
+                        <p class="label-skill"> Github</p>
+                        <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
                 </ul>
             </div>
