--- a/src/fonts.css
+++ b/src/fonts.css
@@ -2,14 +2,14 @@
 
 @font-face {
     font-family: "Raleway-Regular";
-    src: url("./assets/fonts/Raleway-Regular.eot");
+    src: url("assets/fonts/Raleway-Regular.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Raleway-Regular.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Raleway-Regular.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Raleway-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Raleway-Regular.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Raleway-Regular.woff2") format("woff2");
+    src: url("assets/fonts/Raleway-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Raleway-Regular.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Raleway-Regular.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Raleway-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Raleway-Regular.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Raleway-Regular.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -17,14 +17,14 @@
 
 @font-face {
     font-family: "Raleway-Bold";
-    src: url("./assets/fonts/Raleway-Bold.eot");
+    src: url("assets/fonts/Raleway-Bold.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Raleway-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Raleway-Bold.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Raleway-Bold.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Raleway-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Raleway-Bold.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Raleway-Bold.woff2") format("woff2");
+    src: url("assets/fonts/Raleway-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Raleway-Bold.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Raleway-Bold.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Raleway-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Raleway-Bold.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Raleway-Bold.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -32,14 +32,14 @@
 
 @font-face {
     font-family: "Raleway-Black";
-    src: url("./assets/fonts/Raleway-Black.eot");
+    src: url("assets/fonts/Raleway-Black.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Raleway-Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Raleway-Black.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Raleway-Black.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Raleway-Black.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Raleway-Black.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Raleway-Black.woff2") format("woff2");
+    src: url("assets/fonts/Raleway-Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Raleway-Black.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Raleway-Black.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Raleway-Black.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Raleway-Black.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Raleway-Black.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -47,14 +47,14 @@
 
 @font-face {
     font-family: "Roboto-Regular";
-    src: url("./assets/fonts/Roboto-Regular.eot");
+    src: url("assets/fonts/Roboto-Regular.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Roboto-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Roboto-Regular.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Roboto-Regular.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Roboto-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Roboto-Regular.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Roboto-Regular.woff2") format("woff2");
+    src: url("assets/fonts/Roboto-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Roboto-Regular.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Roboto-Regular.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Roboto-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Roboto-Regular.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Roboto-Regular.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -62,14 +62,14 @@
 
 @font-face {
     font-family: "Roboto-Bold";
-    src: url("./assets/fonts/Roboto-Bold.eot");
+    src: url("assets/fonts/Roboto-Bold.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Roboto-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Roboto-Bold.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Roboto-Bold.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Roboto-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Roboto-Bold.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Roboto-Bold.woff2") format("woff2");
+    src: url("assets/fonts/Roboto-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Roboto-Bold.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Roboto-Bold.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Roboto-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Roboto-Bold.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Roboto-Bold.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
@@ -77,14 +77,14 @@
 
 @font-face {
     font-family: "Roboto-Black";
-    src: url("./assets/fonts/Roboto-Black.eot");
+    src: url("assets/fonts/Roboto-Black.eot");
     /* IE9 Compat Modes */
-    src: url("./assets/fonts/Roboto-Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("./assets/fonts/Roboto-Black.otf") format("opentype"), /* Open Type Font */
-    url("./assets/fonts/Roboto-Black.svg") format("svg"), /* Legacy iOS */
-    url("./assets/fonts/Roboto-Black.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("./assets/fonts/Roboto-Black.woff") format("woff"), /* Modern Browsers */
-    url("./assets/fonts/Roboto-Black.woff2") format("woff2");
+    src: url("assets/fonts/Roboto-Black.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("assets/fonts/Roboto-Black.otf") format("opentype"), /* Open Type Font */
+    url("assets/fonts/Roboto-Black.svg") format("svg"), /* Legacy iOS */
+    url("assets/fonts/Roboto-Black.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("assets/fonts/Roboto-Black.woff") format("woff"), /* Modern Browsers */
+    url("assets/fonts/Roboto-Black.woff2") format("woff2");
     /* Modern Browsers */
     font-weight: normal;
     font-style: normal;
